--- a/package.json
+++ b/package.json
@@ -26,5 +26,9 @@
   "homepage": "https://github.com/sxxov/prettier-plugin-no-eq-empty#readme",
   "peerDependencies": {
     "prettier": "^3"
+  },
+  "devDependencies": {
+    "prettier": "^3.6.2",
+    "prettier-plugin-jsdoc": "^1.3.3"
   }
 }
