--- a/package.json
+++ b/package.json
@@ -4,6 +4,11 @@
   "description": "A prettier plugin to remove `=\"\"` from HTML attributes",
   "type": "module",
   "module": "index.js",
+  "exports": {
+    ".": {
+      "import": "./index.js"
+    }
+  },
   "scripts": {},
   "repository": {
     "type": "git",
