--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "description": "A prettier plugin to remove `=\"\"` from HTML attributes",
   "type": "module",
   "module": "index.js",
+  "main": "index.js",
   "exports": {
     ".": {
-      "import": "./index.js"
+      "import": "./index.js",
+      "default": "./index.js"
     }
   },
   "scripts": {},
